fixes bug 301358 "HTTP 'refresh' doesn't load page with bfcache enabled" r=biesi sr=bryner a=bsmedberg